# nonebot-plugin-pcrjjc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
data/pcrjjc/: account.json
src/nonebot_plugin_pcrjjc/: __init__.py  bsgamesdk.py  config.py  main.py  pcrclient.py  query.py  rsacr.py  text2img.py
src/plugins/nonebot_plugin_pcrjjc/: __init__.py  aiorequests.py  bsgamesdk.py  config.py  pcrclient.py  query.py  rsacr.py
